--- a/index.html.2
+++ b/index.html.2
@@ -33,8 +33,8 @@
       <h1>자기소개</h1>
    </div>
    <div id="nav">
-      <h3><a href="index.html">기본 인적사항</a></h3>
-      <h3><a href="index2.html">좋아하는 것</a></h3>
+      <h3><a href="index.html.1">기본 인적사항</a></h3>
+      <h3><a href="index.html.2">좋아하는 것</a></h3>
    </div>
    <div id="section">
         <img src="엔드게임.jpg" style="float:right" width="300px" height="auto" alt="End Game poster" hspace="50" vspace="50">
