Update and rename index.html to index.html.1

--- a/index.html.1
+++ b/index.html.1
@@ -33,8 +33,8 @@
       <h1>자기소개</h1>
    </div>
    <div id="nav">
-      <h3><a href="index.html">기본 인적사항</a></h3>
-      <h3><a href="index2.html">좋아하는 것</a></h3>
+      <h3><a href="index.html.1">기본 인적사항</a></h3>
+      <h3><a href="index.html.2">좋아하는 것</a></h3>
    </div>
    <div id="section">
         <img src="Nest.net 로고.png" style="float:right" width="450px" height="auto" alt="Nest.net logo" hspace="50" vspace="50">
